# hm-deeplearning

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml
docs/: CONTRACT_1_RAW_PROCESSING.md  CONTRACT_2_TRAINING_DATASET.md  CONTRACT_3_MODEL_ARCHITECTURE.md  CONTRACT_4_TRAINING_INFRASTRUCTURE.md  DATA_DOCUMENTATION.md  ENVIRONMENT_SETUP.md  PROJECT_ARCHITECTURE.md  README.md
scripts/: evaluate.py  predict.py  train.py
src/: __init__.py
src/evaluation/: __init__.py
src/models/: __init__.py
src/training/: __init__.py
src/utils/: data_validation.py
tests/unit/: test_data_validation.py  test_example.py
